# uscauv-ros-drivers

./: .tags  .tags_sorted_by_file  CMakeLists.txt  README.md  README.md.main  package.xml  setup.py
auxpod/: CMakeLists.txt  package.xml
auxpod/src/: AuxPod.cpp  AuxPod.h  main.cpp
auxpod/srv/: DropMarker.srv  FireTorpedo.srv
ball_drop/: I2C_Ball_Drop.cpp  I2C_Ball_Drop.h  ball_dropper_test.py  i2c.cpp
br_echo/: CMakeLists.txt  package.xml  setup.py
br_echo/ping_python/bluerobotics_ping.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
esccontrol_msgs/: CMakeLists.txt  package.xml
i2c_cpp/: CMakeLists.txt  package.xml
i2c_cpp/include/i2c_cpp/: I2C.h
i2c_cpp/src/: I2C-mock.cpp  I2C.cpp
include/: ros_esccontrol.h
marker_dropper/: package.xml
marker_dropper/src/: marker_dropper.cpp  marker_dropper.h
motion_controller/: CMakeLists.txt  package.xml
motion_controller/src/: angle_pid.h  motor_powers.h  trap_int.cpp  trap_int.h  turtle_motion.cpp  turtle_motion.h  turtle_motor_test.cpp
motion_controller/srv/: InitMotors.srv  SetDepth.srv  SetEnabled.srv  SetForwardsPower.srv  SetRollPitchAngles.srv  SetYawAngle.srv  Zero.srv
msg/: ESCThrottle.msg
ros_cv_inference/: CMakeLists.txt  package.xml  setup.py
ros_cv_inference/src/ros_cv_inference/: ros_cv_inference.py  ros_cv_laptop.py  test_cv_subscriber.py
ros_esccontrol/: CMakeLists.txt  package.xml
ros_esccontrol/include/: ros_esccontrol.h
ros_esccontrol/src/: controller_sub.cpp  controller_sub.hpp
ros_esccontrol/src/lib/PCA9685/: PCA9685.cpp  PCA9685.h
ros_marker_dropper/: CMakeLists.txt  package.xml
ros_marker_dropper/src/: marker_dropper.cpp  marker_dropper.h
ros_navx_micro/: package.xml
ros_ngimu/: CMakeLists.txt  README.md  package.xml
ros_ngimu/osc99/: CMakeLists.txt  Osc99.h  OscBundle.cpp  OscMessage.cpp  OscPacket.cpp  OscPacket.h  OscSlip.cpp  OscSlip.h
ros_ngimu/oscpack/: CMakeLists.txt
ros_ngimu/oscpack/osc/: OscPacketListener.h  OscTypes.h
ros_ngimu/src/: NGIMU-C-Cpp-Example.cpp  NgimuReceive.cpp  NgimuReceive.h  ros_ngimu.cpp  ros_ngimu.h
ros_si7021/: CMakeLists.txt  package.xml
ros_si7021/src/: ros_si7021.cpp
src/: controller_sub.cpp  controller_sub.hpp  turtle_motion.cpp  turtle_motor_test.cpp
src/lib/I2C/: I2C.cpp
src/lib/PCA9685/: PCA9685.cpp
src/navx_micro/: __init__.py  ahrs.py  registerio.py  registerio_i2c.py
src/navx_micro/_impl/: ahrsprotocol.py
srv/: GoStraight.srv
utility_arduino/: CMakeLists.txt  package.xml  utility_arduino.ino
utility_arduino/src/: utility_arduino.cpp
utility_arduino/utility_arduino/: utility_arduino.ino
utility_teensy/: CMakeLists.txt  package.xml
utility_teensy/msg/: README.md  Sample.msg
utility_teensy/src/: MS5837.cpp  MS5837.h  README.md  utility_teensy_handler.ino  utility_teensy_sample.cpp  utility_teensy_sample.h
utility_teensy/srv/: README.md
