<?xml version="1.0"?>
<package>
  <name>esccontrol_msgs</name>
  <version>0.0.1</version>
  <description>The USC AUV esc control package</description>
  <maintainer email="jsmith@crackofdawn.onmicrosoft.com">multiplemonomials</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
</package>
