cmake_minimum_required(VERSION 2.6)
PROJECT(oscpack)



ADD_LIBRARY(oscpack 

osc/OscTypes.h
osc/OscTypes.cpp 
osc/OscHostEndianness.h
osc/OscException.h
osc/OscPacketListener.h
osc/MessageMappingOscPacketListener.h
osc/OscReceivedElements.h
osc/OscReceivedElements.cpp
osc/OscPrintReceivedElements.h
osc/OscPrintReceivedElements.cpp
osc/OscOutboundPacketStream.h
osc/OscOutboundPacketStream.cpp
)

target_include_directories(oscpack PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
